src/assets/css/default.css
:root {
    --lineHeight: 1.4285;
    --wishPreviewHeight: 192px;
    --dimmerZIndex: 100;
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: #f4f4f4;
}
@media (prefers-color-scheme: dark) {
    body,
    body.pushable {
        color: #fff;
        background-color: #2c2c2c;
    }
}

img,
svg {
    max-width: 100%;
}

figure {
    margin: 0 0 1em;
}

/**
 * Logo
 */
.ui.menu .item.home > :is(img, svg):not(.ui) {
    width: auto;
    height: 1em;
    margin: 0;
}

#logo {
    color: inherit;
}
#logo path {
    fill: currentColor;
}

/**
 * Footer
 */
.ui.footer {
    position: sticky;
    top: 100%;

    min-height: 15vh;
}
@media (min-width: 768px) {
    .ui.footer {
        padding-top: 2em;
        padding-bottom: 2em;
    }
}

.ui.vertical.menu.sidebar .ui.footer {
    position: static;
}

/**
 * Progress
 */
.ui.progress.nolabel:last-child {
    margin: 0;
}

/**
 * Wishlist Grid
 */
@media (max-width: 767.98px) {
    .ui.ui.ui.ui.stackable.grid.actions,
    .ui.ui.ui.ui.stackable.grid.wishlist {
        margin: -1rem !important;
    }

    .wishlist-filter-wrapper {
        margin: -1rem;
    }
}

.ui.one.column.grid > .column:not(.row, :first-of-type) {
    padding-top: 0;
}

/**
 * Wishlist Card
 */
.wishlist .ui.card {
    --padding: 0.91666667em;
    --buttonsHeight: calc((.92857143rem + 0.78571429em * 2) * 2 + 0.25em + 0.75em);
    --hoverHeight: calc(1em + 3 * var(--padding));
}
.wishlist .ui.card:focus-within {
    z-index: calc(var(--dimmerZIndex) + 2);
}

.wishlist .ui.fluid.card {
    height: 100%;
}
.wishlist:not(.one).column .ui.fluid.card::before {
    position: absolute;
    right: 0;
    left: 0;
    bottom: 0;

    height: 4em;
    width: 100%;

    content: '';
    border-radius: .28571429rem;

    background-image: linear-gradient(0deg, rgba(255, 255, 255, 1) 0.75em, rgba(255, 255, 255, 0.9) 45%, rgba(255, 255, 255, 0) 100%);
}
@media (prefers-color-scheme: dark) {
    .wishlist:not(.one).column .ui.fluid.card::before {
        background-image: linear-gradient(0deg, rgba(27, 28, 29, 1) 0.75em, rgba(27, 28, 29, 0.9) 45%, rgba(27, 28, 29, 0) 100%);
    }
}
.wishlist .ui.fluid.card.loading::before {
    height: 100%;
}

.ui.card.horizontal,
.ui.horizontal.cards > .card {
    flex-wrap: nowrap;
    width: auto;
}

/** Image */
.wishlist .ui.card > .image > :is(svg, img.preview) {
    display: block;

    height: 100%;
}
.wishlist:not(.one).column .ui.card > .image > :is(svg, img.preview) {
    height: var(--hoverHeight);
}
@media (hover: hover) {
    .wishlist:not(.one).column .ui.card > .image > :is(svg, img.preview) {
        height: max(var(--hoverHeight), var(--wishPreviewHeight));
    }
}

.wishlist .ui.card > .image > svg {
    width: 100%;

    color: #f0f0f0;
    background-color: #f4f4f4;

    box-sizing: border-box;
    border-radius: inherit;
}
@media (prefers-color-scheme: dark) {
    .wishlist .ui.card > .image > svg {
        color: rgba(255, 255, 255, 0.6);
        background-color: #222;
    }
}

.wishlist .ui.card > .image > svg#no-image {
    padding: 15% 10%;
}
@media (prefers-color-scheme: dark) {
    .wishlist .ui.card > .image > svg#no-image {
        color: rgba(255, 255, 255, 0.6);
    }
}

@media (hover: hover) {
    @media (prefers-reduced-motion: no-preference) {
        .wishlist .ui.card > .image > svg {
            transition:
                0.2s linear height,
                0.2s linear padding,
                0.2s linear opacity;
        }
    }
    .wishlist:not(.one).column .ui.card:hover > .image > svg {
        height: var(--hoverHeight);
        padding: 0 !important;
        opacity: 0;
    }
}

.wishlist .ui.card > .image > img.preview {
    object-fit: cover;
    object-position: 50%;
    background-color: #fff;
}

@media (prefers-color-scheme: dark) {
    .wishlist .ui.card > .image > img.preview {
        filter: brightness(80%);
        background-color: #111;
    }
}

@media (hover: hover) {
    @media (prefers-reduced-motion: no-preference) {
        .wishlist .ui.card > .image > img.preview {
            transition:
                0.2s linear height,
                0.2s linear opacity;
        }
    }

    .wishlist:not(.one).column .ui.card:hover > .image > img.preview {
        height: var(--hoverHeight);
    }
}

.ui.card.horizontal > .image,
.ui.horizontal.cards > .card > .image {
    --sizeCardY: calc(1.28571429em * 1.28571429 + 2em + 3px);
    --sizeFaviconX: calc(1.25em + var(--padding) * 2);

    width: min(var(--sizeFaviconX), var(--sizeCardY));
    min-height: var(--sizeCardY);
}
@media (max-width: 512px) {
    .ui.card.horizontal > .image,
    .ui.horizontal.cards > .card > .image {
        display: none;
    }
}

/** Provider */
.wishlist .ui.card > .image,
.wishlist .ui.card > .image > span.provider {
    border-radius: .28571429rem .28571429rem 0 0;
}

.wishlist .ui.card > .image > img.favicon,
.wishlist .ui.card > .image > span.provider {
    position: absolute;
    top: 0;
}

/** Favicon */
.wishlist .ui.card > .image > img.favicon {
    padding: calc(var(--padding) * 1.5) var(--padding);

    height: 1.25em;
    width: auto;

    box-sizing: content-box;
    z-index: 1;
}

@media (prefers-color-scheme: dark) {
    .wishlist .ui.card > .image > img.favicon {
        filter: brightness(80%);
    }
}

.wishlist .ui.card > .image > img.favicon + span.provider {
    padding-left: 3em;
}

/** Provider name */
.wishlist .ui.card > .image > span.provider {
    display: block;
    width: 100%;
    padding: calc(var(--padding) * 1.5) var(--padding);

    line-height: 1;
    user-select: none;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;

    background-color: rgba(255, 255, 255, 0.6);
    backdrop-filter: blur(4px);
}

@media (prefers-color-scheme: dark) {
    .wishlist .ui.card > .image > span.provider {
        background-color: rgba(0, 0, 0, 0.6);
    }
}

@supports (backdrop-filter: blur(4px)) {
    .wishlist .ui.card > .image > span.provider {
        background-color: rgba(255, 255, 255, 0.2);
        backdrop-filter: blur(4px);
    }

    @media (prefers-color-scheme: dark) {
        .wishlist .ui.card > .image > span.provider {
            background-color: rgba(0, 0, 0, 0.2);
        }
    }
}

@media (hover: hover) {
    .wishlist .ui.card > .image > span.provider {
        position: absolute;

        opacity: 0;
    }

    @media (prefers-reduced-motion: no-preference) {
        .wishlist .ui.card > .image > span.provider {
            transition: opacity 0.2s linear;
        }
    }

    .wishlist .ui.card:hover > .image > span.provider {
        display: block;

        opacity: 1;
    }
}

/** Content */
.wishlist .ui.card > .content:not(.extra) {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 0.5em;
}
@media (hover: hover) {
    @media (prefers-reduced-motion: no-preference) {
        .wishlist .ui.card > .content:not(.extra) {
            transition:
                0.2s linear height,
                0.2s linear margin-bottom;
        }
    }

    .wishlist:not(.one).column .ui.card > .content:not(.extra) {
        --contentHeight: calc(var(--wishPreviewHeight) * 1.25);

        height: var(--contentHeight);

        overflow: hidden;
    }

    .wishlist:not(.one).column .ui.card:hover > .content:not(.extra) {
        height: calc(var(--contentHeight) + 0.75em - 4px);

        margin-bottom: var(--buttonsHeight);
    }
}

.wishlist .ui.card > .content > .header {
    flex-shrink: 0;

    max-height: calc(2 * 1.28571429em);
    overflow: hidden;
}

.wishlist .ui.card > .content > .description {
    margin-top: 0;
    overflow: auto;
}
@media (max-width: 768px) {
    .wishlist .ui.horizontal.card > .content > .description {
        display: none;
    }
}

/** Buttons */
.wishlist .ui.card > .extra.buttons,
.wishlist .ui.card > .content > .extra.buttons {
    position: relative;

    display: flex;
    justify-content: flex-start;
    align-items: center;
    flex-direction: column;
    gap: 0.25em;
    width: 100%;

    padding-top: 0;

    background-color: inherit;
    z-index: 2;
}

.wishlist .ui.card > .content > .extra.buttons {
    flex-direction: row;
}

@media (hover: hover) {
    .wishlist:not(.one).column .ui.card > .extra.buttons {
        position: absolute;
        top: unset;
        right: 0;
        bottom: calc(var(--buttonsHeight) / 2);
        left: 0;
        height: auto;

        opacity: 0;
        margin-bottom: 0;
    }
    @media (prefers-reduced-motion: no-preference) {
        .wishlist:not(.one).column .ui.card > .extra.buttons {
            transition:
                0.2s ease opacity,
                0.2s ease bottom;
        }
    }
    .wishlist:not(.one).column .ui.card:hover > .extra.buttons {
        opacity: 1;

        bottom: 0;
    }
}

.wishlist .ui.card > .extra.buttons > .button,
.wishlist .ui.card > .content > .extra.buttons > .button {
    width: 100%;
    margin: 0;

    flex: 1 1 auto;
}

/** Overlay */
.ui.card .dimmer,
.ui.cards > .card .dimmer {
    z-index: calc(var(--dimmerZIndex) + 2);
}

/**
 * Label
 */
.ui.label {
    z-index: calc(var(--dimmerZIndex) + 1);
}

p .ui.horizontal.label {
    margin: 0;
    cursor: default;
    user-select: none;
}

/**
 * Flex
 */
.flex {
    display: flex;
    flex-flow: row wrap;
}
.flex.wishlist-filter {
    gap: 1rem;
}

@media (max-width: 767px) {
    .flex {
        flex-direction: column;
    }
    .flex.wishlist-filter {
        flex-direction: row;
    }

    .flex > *,
    .flex > .ui.button {
        margin-bottom: 0.5rem;
    }
    .flex.wishlist-filter > div {
        flex: 1 1 auto;
        margin: 0;
    }
    .flex.wishlist-filter > div > div {
        width: 100%;
    }

    .flex :last-child {
        margin-bottom: 0;
    }
}

/**
 * Menu
 */
.pusher {
    min-height: 100vh;
}
body.pushable > .pusher {
    background-color: transparent;
}
.pusher .menu.toggle {
    display: none;
}

.ui.attached.menu.sidebar:not(.tabular) {
    border: 0;
}

@media (prefers-color-scheme: dark) {
    .ui.attached.menu.desktop:not(.tabular) {
        border: 0;
    }
}

.ui.vertical.menu .footer .item > i.icon,
.ui.vertical.menu .footer .item > i.icons {
    float: none;
    margin: 0;
}

@media (max-width: 767px) {
    .pusher .menu.toggle {
        display: block;
    }

    .pusher .menu.attached.desktop {
        display: none;
    }
}

/**
 * Action Input
 */
.ui.action.input > .action.input > input {
    flex-shrink: 1;
    width: 100%;
}

@media (max-width: 400px) {
    .ui.action.input {
        flex-direction: column;
    }

    .ui.action.input > input {
        border-radius: 0.33333333rem 0.33333333rem 0 0 !important;
        border: 1px solid rgba(34, 36, 38, .15) !important;
    }

    .ui.action.input > .button:last-child,
    .ui.action.input > .buttons:last-child > .button,
    .ui.action.input > .dropdown:last-child {
        border-radius: 0 0 0.33333333rem 0.33333333rem !important;
    }
}

/**
 * Options
 */
.ui.dropdown.wishlist-options,
.ui.dropdown.wish-options {
    text-align: center;
}

.ui.dropdown .menu > a.item,
.ui.dropdown .menu > a.item:hover {
    color: rgba(0, 0, 0, .95);
}

/**
 * Filter
 */
.ui.dropdown.filter.priority .menu {
    z-index: calc(var(--dimmerZIndex) + 3);
}

/**
 * List
 */
ul.ui.list li::before {
    display: none;
}

ul.ui.list {
    margin: 0;
}

/**
 * Dropdown
 */
button.item {
    width: 100%;

    background-color: transparent;
}

